# SmartParking

./: .gitignore  CMakeLists.txt  README.md
src/: ALPR.cpp  ALPR.h  Database.cpp  Database.h  Dijkstra.cpp  Dijkstra.h  Display.cpp  Display.h  GUI.cpp  GUI.h  Gate.cpp  Gate.h  ParkingSlotManager.cpp  ParkingSlotManager.h  Server.h  main.cpp  main_server.cpp
web/: index.html
web/css/: style.css
web/js/: app.js
